added zp offset text

--- a/cl1354_ediscs_example.ipynb
+++ b/cl1354_ediscs_example.ipynb
@@ -267,7 +267,9 @@
     "\n",
     "You will also need to create two new subdirectories called logs/ and plots/ (the plots/ directory is only necessary if you want to save the EAZY and LDP redshift comparison plots from each iteration. NOTE: these files are small in size, but there will be many of them and the plots/ directory can easily grown to be 3+ GB in size. If you do not want to save all of these plots, this can be done below.\n",
     "\n",
-    "Now run the code that will generate a grid of zeropoint offsets in V, R, and I. Note that this process will take an extremely long time (~5$-$8 seconds per grid element, e.g., ~20 hours for offsets in the range $-$0.2 to +0.2 in steps of 0.02 mag), therefor it should be run in the background or on a separate screen. "
+    "Now run the code that will generate a grid of zeropoint offsets in V, R, and I. Note that this process will take an extremely long time (~5$-$8 seconds per grid element, e.g., ~20 hours for offsets in the range $-$0.2 to +0.2 in steps of 0.02 mag), therefor it should be run in the background or on a separate screen. \n",
+    "\n",
+    "It is possible to run with asymmetric zeropoint ranges for each band.  See ea.main code comments for parameter names and syntax."
    ]
   },
   {
@@ -347,22 +349,23 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda env:astroconda]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-env-astroconda-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
